--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@greatcloak/ngx-barcode": "^2.14.1",
     "@ngrx/store": "^14.3.2",
     "@reduxjs/toolkit": "^1.9.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "ng-click-outside": "^9.0.1",
     "ng-zorro-antd": "^14.1.1",
     "ngx-print": "^1.2.1",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
